testdata/baselines/reference/submodule/compiler/jsxImportForSideEffectsNonExtantNoError.errors.txt
jsxImportForSideEffectsNonExtantNoError.tsx(2,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.


==== jsxImportForSideEffectsNonExtantNoError.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    import * as React from "react";
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    import "./App.css"; // doesn't actually exist
    
    const tag = <div></div>;
    